fix: border collapseing

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -63,6 +63,11 @@
   border-right-width: 0;
 }
 
+.hui-grid .hui-grid-scrollable-container tr:last-child,
+.hui-grid .hui-grid-scrollable-container td {
+  border-bottom-width: 0;
+}
+
 /* Header */
 
 .hui-grid-table-fixed {
